<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.alexisjehan</groupId>
	<artifactId>dsv-mender</artifactId>
	<version>1.1.0-SNAPSHOT</version>

	<name>DSV Mender</name>
	<description>A Java 11+ library to fix malformed DSV (Delimiter-Separated Values) data automatically.</description>
	<url>https://github.com/AlexisJehan/DsvMender</url>
	<inceptionYear>2017</inceptionYear>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>Alexis Jehan</name>
		<url>https://github.com/AlexisJehan</url>
	</organization>
	<developers>
		<developer>
			<id>alexisjehan</id>
			<name>Alexis Jehan</name>
			<email>alexis.jehan@outlook.com</email>
			<organization>Alexis Jehan</organization>
			<organizationUrl>https://github.com/AlexisJehan</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:AlexisJehan/DsvMender.git</connection>
		<developerConnection>scm:git:git@github.com:AlexisJehan/DsvMender.git</developerConnection>
		<url>https://github.com/AlexisJehan/DsvMender</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/AlexisJehan/DsvMender/issues</url>
	</issueManagement>
	<ciManagement>
		<system>GitHub Actions</system>
		<url>https://github.com/AlexisJehan/DsvMender/actions</url>
	</ciManagement>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>11</maven.compiler.release>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.github.alexisjehan</groupId>
			<artifactId>javanilla</artifactId>
			<version>1.8.0</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.26.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>LICENSE.txt</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>LICENSE.txt</include>
				</includes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>4.5</version>
				<executions>
					<execution>
						<id>license-check</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<licenseSets>
						<licenseSet>
							<header>LICENSE.txt</header>
							<includes>
								<includes>src/**/*.java</includes>
							</includes>
						</licenseSet>
					</licenseSets>
					<mapping>
						<java>SLASHSTAR_STYLE</java>
					</mapping>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.23.0</version>
				<executions>
					<execution>
						<id>pmd-check</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>7.3.0</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>7.3.0</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludeFromFailureFile>${project.basedir}/exclude-pmd.properties</excludeFromFailureFile>
					<linkXRef>false</linkXRef>
					<includeTests>true</includeTests>
					<verbose>true</verbose>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<compilerArg>-Xlint:all</compilerArg>
					</compilerArgs>
					<excludes>
						<exclude>**/examples/**</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<id>jacoco-prepare-agent</id>
						<phase>test-compile</phase>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>**/examples/**</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>source-jar-no-fork</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
					<execution>
						<id>source-test-jar-no-fork</id>
						<goals>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.7.0</version>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalOptions>-html5</additionalOptions>
					<excludePackageNames>examples</excludePackageNames>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<id>gpg-sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>